# motex

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  bin_handler.rs  lib.rs  main.rs  motex_options.rs  texview.rs
src/files/: bin_handler.rs  file_loading.rs  mod.rs
src/n64_graphics/: main.rs  mod.rs  textures.rs
tests/: bin_handler_tests.rs  color_tests.rs  options_tests.rs
