[package]
name = "motex"
version = "0.1.0"
authors = ["Parker Burnett <jpburnett@byu.net>"]
edition = "2021"
rust-version = "1.82"
publish = false
readme = "README.md"

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui-modal = "0.5.0"
egui-phosphor = "0.7.3"
egui_extras = { version = "0.29.1" , features = ["all_loaders"]}
variant_count = "1.1.0"
image = "0.25.4"
anyhow = "1.0.90"
byteorder = "1.5.0"
rfd = "0.14.1"
pigment64 = "0.4.5"
strum = "0.26.3"
open = "5.3"