[package]
name = "motex"
version = "0.1.0"
authors = ["Parker Burnett <jpburnett@byu.net>"]
edition = "2021"
rust-version = "1.83"
publish = false
readme = "README.md"

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui_extras = { version = "0.29.1" , features = ["all_loaders"]}
anyhow = "1.0.93"
rfd = "0.15.1"
pigment64 = "0.4.5"
strum = "0.26.3"
open = "5.3"